--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#education">Education</a>
             <a href="#services">Services</a>
-            <a href="#testimonials">Testimonials</a>
+            
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -187,7 +187,7 @@
 
 
 
-                                         <!-- Testimonials -->
+                                         <!-- Testimonials 
 
 
         <section class="testimonials" id="testimonials">
@@ -242,7 +242,7 @@
             </div>
 
         </section>
-
+                        -->
 
                             <!-- Contatct Section Starts from Here -->
 
